# markov-chain

./: README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yaml
src/markov_chain/: __init__.py
tests/: test_coin_flip.py  test_gamblers_ruin.py
