[project]
name = "markov-chain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Tomperez98", email = "tomasperezalvarez@gmail.com" }]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
markov-chain = "markov_chain:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright[nodejs]>=1.1.396",
    "pytest>=8.3.5",
 "ruff>=0.9.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--import-mode=importlib"]
